--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@remix-run/cloudflare": "^2.9.2",
         "@remix-run/cloudflare-pages": "^2.9.2",
         "@remix-run/react": "^2.9.2",
+        "@sentry/vite-plugin": "^2.21.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "dayjs": "^1.11.11",
@@ -44,6 +45,8 @@
         "@cloudflare/workers-types": "^4.20240620.0",
         "@remix-run/dev": "^2.9.2",
         "@remix-run/testing": "^2.9.2",
+        "@sentry/cloudflare": "8.22.0",
+        "@sentry/remix": "8.22.0",
         "@testing-library/react": "^14.3.1",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
