--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,9 @@ pages_build_output_dir = "build/client"
 # https://developers.cloudflare.com/workers/platform/compatibility-dates
 compatibility_date = "2024-05-13"
 
+# Need AsyncLocalStorage support for Sentry SDK to work
+compatibility_flags = ["nodejs_als"]
+
 [[analytics_engine_datasets]]
-  binding = "WEB_COUNTER_AE"
-  dataset = "metricsDataset"
+binding = "WEB_COUNTER_AE"
+dataset = "metricsDataset"
